# FlakeCatcher

./: .gitignore  LICENSE  README.md  config.ini  embeddings.yml  pyproject.toml
FlakeCatcher/: ShadowStacker.py  Ui_MainWindow.py  Ui_PreferenceDialog.py  main.py
data/: config.json  documents
