[tool.poetry]
name = "catcher"
version = "0.1.0"
description = ""
authors = ["Auro <13219991018@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.6"
numpy = "1.26.4"
pyside6 = "^6.7.2"
txtai = "^7.4.0"
sentence-transformers = "^3.1.1"
qt-material = "^2.14"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
